--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ db.sqlite3-journal
 **/__pycache__/**
 *.pyc
 /media/
-
+.idea/
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
